[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kiff"
version = "0.9.0"
dependencies = ["pillow", "numpy"]

[project.scripts]
kiff = "kiff.kiff:main"

[tool.black]
line-length = 120

[tool.pyright]
reportOptionalMemberAccess = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
